Automatically collect results and evaluate after runtime
